<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@drawable/background_menu"
        android:layout_height="match_parent"
        tools:context=".ui.score.ScoreActivity">
    <TextView
            style="@style/subtitle_game_wizard"
            android:text="@string/label_event_name"
            android:layout_width="0dp"
            android:gravity="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="32sp"
            android:layout_height="wrap_content"
            android:id="@+id/tvEventName" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="42dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="42dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            style="@style/subtitle_game_wizard"
            android:text="@string/label_home"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvHomeName"
            app:layout_constraintTop_toBottomOf="@+id/chronometer"
            app:layout_constraintEnd_toEndOf="@+id/btGoalHome" app:layout_constraintStart_toStartOf="@+id/btGoalHome"
            android:layout_marginTop="24dp"/>

    <TextView
            style="@style/subtitle_game_wizard"
            android:text="@string/label_away"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvAwayName"
            app:layout_constraintTop_toTopOf="@+id/tvHomeName"
            app:layout_constraintStart_toStartOf="@+id/btAwayGoal"
            app:layout_constraintEnd_toEndOf="@+id/btAwayGoal"/>
    <TextView
            style="@style/subtitle_game_wizard"
            android:text="0"
            android:textSize="64sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvGoalHome"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvHomeName"
            app:layout_constraintStart_toStartOf="@+id/btGoalHome"
            app:layout_constraintEnd_toEndOf="@+id/btGoalHome"/>
    <TextView
            style="@style/subtitle_game_wizard"
            android:text="0"
            android:textSize="64sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvAwayGoal"
            app:layout_constraintTop_toTopOf="@+id/tvGoalHome" app:layout_constraintStart_toStartOf="@+id/btAwayGoal"
            app:layout_constraintEnd_toEndOf="@+id/btAwayGoal"/>
    <Button
            style="@style/custom_button"
            android:text="@string/label_goal"
            android:id="@+id/btGoalHome" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/tvGoalHome" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/btAwayGoal"
            android:layout_marginStart="42dp" android:layout_marginEnd="42dp"/>

    <Button
            style="@style/custom_button"
            android:text="@string/label_goal"
            android:id="@+id/btAwayGoal"
            app:layout_constraintTop_toTopOf="@+id/btGoalHome" app:layout_constraintStart_toEndOf="@+id/btGoalHome"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginEnd="42dp"/>
    <Button android:textSize="@dimen/text_button_font_size"
            style="@style/custom_button"
            android:text="@string/label_restart"
            android:id="@+id/btRestart" android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/btGoalHome" app:layout_constraintStart_toStartOf="@+id/btGoalHome"
            app:layout_constraintEnd_toEndOf="@+id/btAwayGoal"
    />
    <Button android:textSize="@dimen/text_button_font_size"
            style="@style/custom_button"
            android:text="@string/label_end_game"
            android:id="@+id/btEndGame" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/btRestart" app:layout_constraintStart_toStartOf="@+id/btRestart"
            app:layout_constraintEnd_toEndOf="@+id/btRestart"/>

    <Button android:textSize="@dimen/text_button_font_size"
            style="@style/custom_button"
            android:text="@string/label_start_game"
            android:id="@+id/btStartGame"
            app:layout_constraintStart_toStartOf="@+id/btEndGame"
            app:layout_constraintEnd_toEndOf="@+id/btEndGame" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/btEndGame"/>

    <com.example.placapp.ui.customViews.MyChronometer
            android:textSize="24sp"
            android:textColor="#FFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="@+id/tvEventName"
            app:layout_constraintEnd_toEndOf="@+id/tvEventName" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvEventName" android:id="@+id/chronometer"/>

</androidx.constraintlayout.widget.ConstraintLayout>